[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/sound-detector+player/sound_detector+player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_level/main_level.gd" type="Script" id=2]
[ext_resource path="res://scenes/Demo Level/Demo Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Geschoss/PizzaGeschoss.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Mouse Cursor/Mouse.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "blink_colorRect"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 1, 0.490196 ), Color( 0, 1, 1, 0 ) ]
}

[node name="main_level" type="Node2D"]
script = ExtResource( 2 )

[node name="sound_detector+player" parent="." instance=ExtResource( 1 )]

[node name="stop_music" type="Button" parent="."]
visible = false
margin_left = 1329.0
margin_top = 499.0
margin_right = 1475.0
margin_bottom = 590.0
text = "stop music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Demo Level" parent="." instance=ExtResource( 3 )]
visible = false

[node name="start_music" type="Button" parent="."]
margin_left = 213.0
margin_top = 394.0
margin_right = 359.0
margin_bottom = 485.0
rect_scale = Vector2( 3.44741, 3.35833 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PizzaGeschoss" parent="." instance=ExtResource( 4 )]
position = Vector2( 1342, 412 )
scale = Vector2( 23.4178, 23.5115 )
script = null

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1031.0
margin_bottom = 620.0
rect_scale = Vector2( 1.92648, 1.92648 )
mouse_filter = 2
color = Color( 0, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink_colorRect = SubResource( 1 )

[node name="Mouse" parent="." instance=ExtResource( 5 )]
[connection signal="music_started" from="." to="sound_detector+player" method="music_should_start"]
[connection signal="music_stoped" from="." to="sound_detector+player" method="music_should_stop"]
[connection signal="barrikaden_spawn_now" from="sound_detector+player" to="." method="_on_sound_detectorplayer_barrikaden_spawn_now"]
[connection signal="farbaenderung_now" from="sound_detector+player" to="." method="_on_sound_detectorplayer_farbaenderung_now"]
[connection signal="gegner_spawn_now" from="sound_detector+player" to="." method="_on_sound_detectorplayer_gegner_spawn_now"]
[connection signal="schiesen_now" from="sound_detector+player" to="." method="_on_sound_detectorplayer_schiesen_now"]
[connection signal="button_down" from="stop_music" to="." method="_on_stop_music_button_down"]
[connection signal="button_down" from="start_music" to="." method="_on_start_music_button_down"]

[editable path="Demo Level"]
